# RAG_ChromaDB

./: .gitignore  README.md  chromadb.ipynb  main.py  pyproject.toml  requirements.txt
data/: rag_architecture.txt  rag_challenges.txt  rag_future.txt  rag_intro.txt  rag_usecases.txt  rag_vs_finetuningvs_promptengineering.txt
